# Cypherock_Assignment

./: CMakeLists.txt  README.md  main.c
include/: base_ot.h  cot.h  logger.h  mta.h  utils.h
src/: base_ot.c  cot.c  logger.c  mta.c  utils.c
test/: mta_test.c  mta_test.h
